--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
     <title>Consumir api html</title>
 </head>
 <body>
-    <p id="info"></p>
+    <form action="">
+    <div style="text-align: center;">
+        <h2>Administrar Producto</h2>
+        <br>
+        <input type="text" id="codprod" placeholder="Digite código">
+        <input type="text" id="nomprod" placeholder="Digite nombre">
+        <input type="number" id="precio" placeholder="Digite precio">
+        <input type="number" id="inventario"placeholder="Digite unidades existentes" >
+        <br>
+        <button id="btn_show">Mostrar</button>
+        <button id="btn_save">Guardar</button>
+        <button id="btn_update">Actualizar</button>
+        <button id="btn_del">Eliminar</button>
+        
+    </div>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
