--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         
     </div>
     </form>
+    <div id="info">
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
